--- a/.github/workflows/e2e-matrix.yml
+++ b/.github/workflows/e2e-matrix.yml
@@ -11,9 +11,6 @@ on:
         required: false
         default: false
 
-env:
-  CYPRESS_CACHE_FOLDER: '.cypress'
-
 permissions: {}
 jobs:
   preinstall:
@@ -44,6 +41,9 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
 
+      - name: Set Cypress cache folder
+        run: echo "CYPRESS_CACHE_FOLDER=$GITHUB_WORKSPACE/.cypress" >> $GITHUB_ENV
+
       - name: Cache node_modules
         id: cache-modules
         uses: actions/cache@v3
@@ -55,6 +55,17 @@ jobs:
       - name: Install packages
         if: steps.cache-modules.outputs.cache-hit != 'true'
         run: yarn install --prefer-offline --frozen-lockfile --non-interactive
+
+      - name: Cache Cypress
+        id: cache-cypress
+        uses: actions/cache@v3
+        with:
+          path: '.cypress'
+          key: ${{ runner.os }}-cypress
+
+      - name: Install Cypress
+        if: steps.cache-cypress.outputs.cache-hit != 'true'
+        run: npx cypress install
 
   e2e:
     needs: preinstall
@@ -356,6 +367,10 @@ jobs:
         with:
           path: '.cypress'
           key: ${{ runner.os }}-cypress
+
+      - name: Install Cypress
+        if: steps.cache-cypress.outputs.cache-hit != 'true'
+        run: npx cypress install
 
       - name: Install applesimutils, reset ios simulators
         if: ${{ matrix.os == 'macos-latest' }}
